# Tech-Europe-AI-Hackathon-GuideZella

./: README.md
backend/: api.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/components/: markdown.component.tsx
